Updated the settings page, and made a small tweak for formated values in the property display.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,4 @@
-#Created by JInto - www.guh-software.de
-#Tue Nov 29 16:36:48 PST 2011
+
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.default=Account Dashboard
@@ -12,8 +11,8 @@ admin.account.detail.tab.carts=Carts
 admin.account.detail.tab.login=Login Info
 admin.account.detail.tab.login.password=Password
 admin.account.detail.tab.orders=Orders
-admin.account.detail.tab.productReviews=Product Reviews
 admin.account.detail.tab.priceGroups=Price Groups
+admin.account.detail.tab.productReviews=Product Reviews
 admin.account.edit=Edit Account
 admin.account.list=List Accounts
 admin.account.list_hint=The Account Listing shows a grid of all accounts in the system.
@@ -201,6 +200,34 @@ admin.order.refundorderpayment_success=Payment refund processed
 admin.order.search=Search
 admin.order.search.invaliddates=An invalid date was entered
 admin.orderfulfillment.process=Process Fulfillment
+admin.priceGroup.detail.noPriceGroupRatesDefined=There are currently no price group rates defined.
+admin.pricegroup=Price Group Manager
+admin.pricegroup.create=Create New Price Group
+admin.pricegroup.default=Price Group Dashboard
+admin.pricegroup.delete=Delete Price Group
+admin.pricegroup.deletePriceGroupRate=Delete Price Group Rate
+admin.pricegroup.deletePriceGroupRate_confirm=Are you sure you want to delete this price group rate?
+admin.pricegroup.deletePriceGroupRate_disabled=Price Group Rate can not be deleted because it is in use
+admin.pricegroup.deletePriceGroupRate_success=Price Group Rate was deleted successfully
+admin.pricegroup.delete_confirm=Are you sure you want to delete this price group?
+admin.pricegroup.delete_nav=Delete
+admin.pricegroup.delete_success=Price Group was deleted successfully
+admin.pricegroup.detail=Price Group Detail
+admin.pricegroup.detail_hint=View the Info page of a given Price Group
+admin.pricegroup.detail_permission=View Price Group Info
+admin.pricegroup.edit=Edit Price Group
+admin.pricegroup.edit.addPriceGroupRate=Add Price Group Rate
+admin.pricegroup.edit.editPriceGroupRate=Edit Price Group Rate
+admin.pricegroup.edit.priceGroupRateAppliesToAllProducts=All Products
+admin.pricegroup.edit.priceGroupRates=Price Group Rates
+admin.pricegroup.edit.removePriceGroupRate=Remove Price Group Rate
+admin.pricegroup.list=List Price Groups
+admin.pricegroup.nopricegroupsdefined=There are currently no price groups defined.
+admin.pricegroup.save=Save Price Group
+admin.pricegroup.save_nav=Save
+admin.pricegroup.save_success=Price Group was saved successfully
+admin.pricegroup.savepricegroup_success=The price group was successfully saved.
+admin.pricegroup.savepricegrouprate_success=The price group and price group rate were successfully saved.
 admin.product=Product Manager
 admin.product.alternateImages=Alternate Images
 admin.product.alternateImages.noAlternateImagesExist=No alternate images exisit for this product.
@@ -296,34 +323,6 @@ admin.product.uploadSkuImage=Upload Image
 admin.product.uploadSkuImage_error=An error ocurred uploading the image or it was not a valid image file (jpg, png, or gif).
 admin.product.uploadSkuImage_success=The image was successfully uploaded.
 admin.productType.settingDefinedIn=Defined In
-admin.pricegroup=Price Group Manager
-admin.pricegroup.create=Create New Price Group
-admin.pricegroup.default=Price Group Dashboard
-admin.pricegroup.delete=Delete Price Group
-admin.pricegroup.deletePriceGroupRate=Delete Price Group Rate
-admin.pricegroup.deletePriceGroupRate_confirm=Are you sure you want to delete this price group rate?
-admin.pricegroup.deletePriceGroupRate_disabled=Price Group Rate can not be deleted because it is in use
-admin.pricegroup.deletePriceGroupRate_success=Price Group Rate was deleted successfully
-admin.pricegroup.delete_confirm=Are you sure you want to delete this price group?
-admin.pricegroup.delete_nav=Delete
-admin.pricegroup.delete_success=Price Group was deleted successfully
-admin.pricegroup.detail=Price Group Detail
-admin.pricegroup.detail_hint=View the Info page of a given Price Group
-admin.pricegroup.detail_permission=View Price Group Info
-admin.priceGroup.detail.noPriceGroupRatesDefined=There are currently no price group rates defined.
-admin.pricegroup.edit=Edit Price Group
-admin.pricegroup.edit.addPriceGroupRate=Add Price Group Rate
-admin.pricegroup.edit.editPriceGroupRate=Edit Price Group Rate
-admin.pricegroup.edit.removePriceGroupRate=Remove Price Group Rate
-admin.pricegroup.edit.priceGroupRateAppliesToAllProducts=All Products
-admin.pricegroup.edit.priceGroupRates=Price Group Rates
-admin.pricegroup.list=List Price Groups
-admin.pricegroup.nopricegroupsdefined=There are currently no price groups defined.
-admin.pricegroup.savepricegroup_success=The price group was successfully saved.
-admin.pricegroup.savepricegrouprate_success=The price group and price group rate were successfully saved.
-admin.pricegroup.save=Save Price Group
-admin.pricegroup.save_nav=Save
-admin.pricegroup.save_success=Price Group was saved successfully
 admin.promotion=Promotion Manager
 admin.promotion.addShippingMethod=Add Shipping Method
 admin.promotion.create=Create New Promotion
@@ -527,6 +526,8 @@ define.detail=Detail
 define.false=False
 define.general=General
 define.global=Global
+define.international=International
+define.local=Local
 define.na=N/A
 define.no=No
 define.none=None
@@ -536,6 +537,7 @@ define.select=Select
 define.selectall=Select All
 define.true=True
 define.yes=Yes
+entity.PriceGroupRate.roundingRule=Rounding Rule
 entity.account.accountDetails=Account Details
 entity.account.accountEmails=Account Emails
 entity.account.accountID=Account ID
@@ -783,17 +785,41 @@ entity.paymentMethod.creditCard=Credit Card
 entity.paymentMethod.paymentMethodCode=Payment Method Code
 entity.paymentmethod.paymentMethodID=Payment Method ID
 entity.paymentmethod.providerGateway=Payment Provider Gateway
-entity.pricegroup.name=Price Group Name
-entity.pricegroup.inheritsFrom=Inherits From
-entity.pricegroup.inheritsFromNothing=N/A
-entity.pricegroup.enabledOnAccount=Enabled
-entity.priceGroup.parentPriceGroup=Parent Price Group
 entity.postalcode.city=city
 entity.postalcode.country=country
 entity.postalcode.latitude=latitude
 entity.postalcode.longitude=longitude
 entity.postalcode.postalCode=Postal Code
 entity.postalcode.state=state
+entity.priceGroup=PriceGroup
+entity.priceGroup.activeFlag=Active
+entity.priceGroup.code=Code
+entity.priceGroup.delete_success=PriceGroup Deleted
+entity.priceGroup.parentPriceGroup=Parent Price Group
+entity.priceGroup.priceGroupCode=Price Group Code
+entity.priceGroup.priceGroupName=Price Group Name
+entity.priceGroupRate=Price Group Rate
+entity.priceGroupRate.SKUs=Include SKUs
+entity.priceGroupRate.delete_success=Price Group Rate Deleted
+entity.priceGroupRate.excludedProductTypes=Exclude Product Types
+entity.priceGroupRate.excludedProducts=Exclude Products
+entity.priceGroupRate.excludedSKUs=Exclude SKUs
+entity.priceGroupRate.globalFlag=Global Rate
+entity.priceGroupRate.priceGroupRate=Price Group Rate
+entity.priceGroupRate.priceGroupRateAmount=Amount
+entity.priceGroupRate.priceGroupRateAppliesTo=Applies To
+entity.priceGroupRate.priceGroupRateType=Price Group Rate Type
+entity.priceGroupRate.priceGroupRateType.amount=Fixed Amount
+entity.priceGroupRate.priceGroupRateType.amountOff=Amount Off
+entity.priceGroupRate.priceGroupRateType.amountOffShort=Off
+entity.priceGroupRate.priceGroupRateType.percentageOff=Percentage Off
+entity.priceGroupRate.priceGroupRateType.percentageOffShort=Off
+entity.priceGroupRate.productTypes=Include Product Types
+entity.priceGroupRate.products=Include Products
+entity.pricegroup.enabledOnAccount=Enabled
+entity.pricegroup.inheritsFrom=Inherits From
+entity.pricegroup.inheritsFromNothing=N/A
+entity.pricegroup.name=Price Group Name
 entity.product=Product
 entity.product.activeFlag=Active
 entity.product.activeFlag_hint=Indicate if the product is active and will be displayed.
@@ -892,31 +918,6 @@ entity.profiletemplate.profileTemplateName=profileTemplateName
 entity.profiletemplateattribute.attribute=attribute
 entity.profiletemplateattribute.profileTemplate=profileTemplate
 entity.profiletemplateattribute.profileTemplateAttributeID=profileTemplateAttributeID
-entity.priceGroup=PriceGroup
-entity.priceGroup.activeFlag=Active
-entity.priceGroup.delete_success=PriceGroup Deleted
-entity.priceGroup.priceGroupName=Price Group Name
-entity.priceGroup.priceGroupCode=Price Group Code
-entity.priceGroup.code=Code
-entity.priceGroupRate=Price Group Rate
-entity.priceGroupRate.delete_success=Price Group Rate Deleted
-entity.priceGroupRate.globalFlag=Global Rate
-entity.priceGroupRate.priceGroupRate=Price Group Rate
-entity.priceGroupRate.priceGroupRateType=Price Group Rate Type
-entity.priceGroupRate.priceGroupRateAmount=Amount
-entity.priceGroupRate.priceGroupRateAppliesTo=Applies To
-entity.priceGroupRate.priceGroupRateType.percentageOff=Percentage Off
-entity.priceGroupRate.priceGroupRateType.percentageOffShort=Off
-entity.priceGroupRate.priceGroupRateType.amountOff=Amount Off
-entity.priceGroupRate.priceGroupRateType.amountOffShort=Off
-entity.priceGroupRate.priceGroupRateType.amount=Fixed Amount
-entity.priceGroupRate.products=Include Products
-entity.priceGroupRate.productTypes=Include Product Types
-entity.PriceGroupRate.roundingRule=Rounding Rule
-entity.priceGroupRate.SKUs=Include SKUs
-entity.priceGroupRate.excludedProducts=Exclude Products
-entity.priceGroupRate.excludedProductTypes=Exclude Product Types
-entity.priceGroupRate.excludedSKUs=Exclude SKUs
 entity.promotion=Promotion
 entity.promotion.activeFlag=Active
 entity.promotion.delete_success=Promotion Deleted
@@ -1111,6 +1112,7 @@ setting=Setting
 setting.account=Account
 setting.advanced=Advanced Settings
 setting.advanced.currencyLocale=Currency Local
+setting.advanced.currencyType=Currency Type
 setting.advanced.dateFormat=Date Format
 setting.advanced.logDatabaseClearAfterDays=Number of days to maintain logs in Database
 setting.advanced.logExceptionsToDatabaseFlag=Log Unexpected Errors to Database
