Further language change to Parent Price Group Rate.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -796,7 +796,7 @@ entity.priceGroup=PriceGroup
 entity.priceGroup.activeFlag=Active
 entity.priceGroup.code=Code
 entity.priceGroup.delete_success=PriceGroup Deleted
-entity.priceGroup.parentPriceGroup=Parent Price Group
+entity.priceGroup.parentPriceGroup=Inherit Rates From Price Group
 entity.priceGroup.priceGroupCode=Price Group Code
 entity.priceGroup.priceGroupName=Price Group Name
 entity.priceGroupRate=Price Group Rate
@@ -819,6 +819,7 @@ entity.priceGroupRate.productTypes=Include Product Types
 entity.priceGroupRate.products=Include Products
 entity.pricegroup.enabledOnAccount=Enabled
 entity.pricegroup.inheritsFrom=Inherits From
+entity.pricegroup.inheritsFromNothing=No (Do not inherit)
 entity.pricegroup.name=Price Group Name
 entity.product=Product
 entity.product.activeFlag=Active
