--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -704,6 +704,7 @@ entity.option.optionImage=Option Image
 entity.option.optionImage_hint=Select Associated Option Image to Upload (optional)
 entity.option.optionName=Option Name
 entity.option.sortOrder=Sort Order
+entity.optionGroup.optionGroupCode=Option Group Code
 entity.optiongroup.delete_success=The Option Group was successfully deleted.
 entity.optiongroup.delete_validatehasoptions=This option group cannot be deleted because it contains options.
 entity.optiongroup.imageGroupFlag=Product Image Group
