--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -824,19 +824,8 @@ entity.pricegroup.inheritsFromNothing=No (Do not inherit)
 entity.pricegroup.name=Price Group Name
 entity.product=Product
 entity.product.activeFlag=Active
-entity.product.activeFlag_hint=Indicate if the product is active and will be displayed.
-entity.product.allowBackorderFlag=Allow Backorders
-entity.product.allowBackorderFlag_hint=Indicate whether this product can be backordered
-entity.product.allowDropshipFlag=Allow Dropship
-entity.product.allowDropshipFlag_hint=Indicate whether this product can be dropshipped
-entity.product.allowPreorderFlag=Allow Pre-Orders
-entity.product.allowPreorderFlag_hint=Indicate whether this product can be preordered
-entity.product.allowShippingFlag=Allow Shipping
-entity.product.allowShippingFlag_hint=Indicate whether this product is deliverable via shipping
-entity.product.alternateImage_uploadError=A problem was encountered uploading the alternate image.
+entity.product.activeFlag_hint=This is used to deactivate a product at the end of it's life.  Products with Active set as "No" will not show up in listings.
 entity.product.brand=Brand
-entity.product.callToOrderFlag=Allow Orders by Phone
-entity.product.callToOrderFlag_hint=Indicate whether customers will be able to order this product by phone.
 entity.product.createdDateTime=Date Create
 entity.product.dateFirstReceived=dateFirstReceived
 entity.product.dateLastReceived=dateLastReceived
@@ -881,35 +870,27 @@ entity.product.shippingWeight_hint=Weight (in lbs) to be used to calculate shipp
 entity.product.skus=skus
 entity.product.template=Design Template
 entity.product.title=Title
-entity.product.trackInventoryFlag=Track Inventory
-entity.product.trackInventoryFlag_hint=Will inventory be tracked for this product?
 entity.product.webQC=webQC
 entity.product.webQEXP=webQEXP
 entity.product.webQOH=webQOH
 entity.productImage.imageDescription=Image Description
 entity.productImage.imageName=Image Name
 entity.productImage.imageType=Image Type
+entity.productRelationship.product=Product
+entity.productRelationship.productRelationshipID=Product Relationship ID
+entity.productRelationship.relatedProduct=Related Product
+entity.productRelationship.relationshipType=Relationship Type
 entity.productReview.createdDateTime=Date Reviewed
 entity.productReview.rating=Rating
 entity.productReview.review=Review
 entity.productType=Product Type
-entity.productrelationship.product=product
-entity.productrelationship.productRelationshipID=productRelationshipID
-entity.productrelationship.relatedProduct=relatedProduct
-entity.productrelationship.relationshipType=relationshipType
-entity.producttype.Products=Products
-entity.producttype.allowBackorderFlag=Allow Backorders
-entity.producttype.allowDropshipFlag=Allow Dropship
-entity.producttype.allowPreorderFlag=Allow Pre-Orders
-entity.producttype.allowShippingFlag=Allow Shipping
-entity.producttype.callToOrderFlag=Allow Orders by Phone
-entity.producttype.delete_validateisassigned=This product type cannot be deleted because it has been assigned to a product and/or it has subtypes which must be moved or deleted first.
-entity.producttype.parentProductType=Parent Product Type
-entity.producttype.productTypeDescription=Product Type Description
-entity.producttype.productTypeID=productTypeID
-entity.producttype.productTypeName=Product Type Name
-entity.producttype.subProductTypes=subProductTypes
-entity.producttype.trackInventoryFlag=Track Inventory
+entity.productType.Products=Products
+entity.productType.delete_validateisassigned=This product type cannot be deleted because it has been assigned to a product and/or it has subtypes which must be moved or deleted first.
+entity.productType.parentProductType=Parent Product Type
+entity.productType.productTypeDescription=Product Type Description
+entity.productType.productTypeID=productTypeID
+entity.productType.productTypeName=Product Type Name
+entity.productType.subProductTypes=subProductTypes
 entity.profile.account=account
 entity.profile.profileID=profileID
 entity.profile.profileName=profileName
@@ -1130,11 +1111,17 @@ setting.order.orderPlacedEmailSubject=New Order Placed Email Subject
 setting.paymentMethod.creditCard.storeCreditCardWithAccount=Allow customers to save credit card numbers for future orders
 setting.paymentMethod.creditCard.storeCreditCardWithOrderPayment=Store credit card numbers with orders
 setting.product=Product
+setting.product.activeFlag_hint=Indicate if the product is active and will be displayed.
 setting.product.allowBackorderFlag=Products can be Backordered
+setting.product.allowBackorderFlag_hint=Indicate whether this product can be backordered
 setting.product.allowDropshipFlag=Products can be dropshipped
+setting.product.allowDropshipFlag_hint=Indicate whether this product can be dropshipped
 setting.product.allowPreorderFlag=Products can be Preordered
+setting.product.allowPreorderFlag_hint=Indicate whether this product can be preordered
 setting.product.allowShippingFlag=Products can be shipped.
+setting.product.allowShippingFlag_hint=Indicate whether this product is deliverable via shipping
 setting.product.callToOrderFlag=Allow Orders by Phone
+setting.product.callToOrderFlag_hint=Indicate whether customers will be able to order this product by phone.
 setting.product.defaultProductTemplate=Default Product Template
 setting.product.imageHeightLarge=Large Image Height
 setting.product.imageHeightMedium=Medium Image Height
@@ -1147,6 +1134,7 @@ setting.product.missingimagepath=Missing Image Path
 setting.product.rootProductCategory=Root Product Category
 setting.product.titleString=Product Title Format
 setting.product.trackInventoryFlag=Track Inventory
+setting.product.trackInventoryFlag_hint=Select this if you would like the system to track inventory at this level.
 setting.product.urlKey=URL Key
 setting.settings=Settings
 setting.value=Value
