--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -446,6 +446,7 @@ admin.setting.paymentMethod.creditCard.checkoutTransactionType.authorizeAndCharg
 admin.setting.paymentMethod.creditCard.checkoutTransactionType.none=None
 admin.setting.paymentMethod.creditCardsAccepted=Credit Cards Accepted
 admin.setting.paymentMethod.creditcardActionOnCheckout=On Checkout
+admin.setting.paymentMethod.dwolla=Dwolla
 admin.setting.paymentMethod.paypalExpress=Paypal Express
 admin.setting.save=Save Settings
 admin.setting.saveAddressZoneLocation=Save Address Zone Location
