--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -391,6 +391,7 @@ admin.setting.deleteShippingRate_success=Shipping Rate Sucessfully Deleted
 admin.setting.deleteTaxCategoryRate=Delete Tax Category Rate
 admin.setting.deleteTaxCategoryRate_success=Tax Category Rate Deleted
 admin.setting.deleteaddresszone=Are you sure that you want to delete this Address Zone?
+admin.setting.deleteaddresszone_confirm=Are you sure you want to delete this Address Zone?
 admin.setting.deleteallorders=Delete All Orders
 admin.setting.deleteallorders_confirm=Are you 100% sure that you want to delete all existing orders and carts from the database
 admin.setting.deleteallproducts=Delete All Products
