--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -288,6 +288,10 @@ admin.product.noProductsDefined=No Products have been entered yet.
 admin.product.noproductpagesdefined=No Product Pages have been defined in the Site Manager
 admin.product.noproducttypesdefined=No Product Types have been defined in the Site Manager
 admin.product.previewalternateimage=Preview Image
+admin.product.pricegroupskuupdatedialog.title=Update Price Group / SKU Price
+admin.product.pricegroupskuupdatedialog.groupname=Group Name
+admin.product.pricegroupskuupdatedialog.selectrate=Select a Rate
+admin.product.pricegroupskuupdatedialog.newamount=New Amount
 admin.product.productCategories.categoryPath=Category Path
 admin.product.productCategories.categoryTitle=Category
 admin.product.productCategories.isFeatured=Featured
