Added Rounding Rule logic. Copied the AlertDialog() function from Mura's admin.js into our core.js and removed getDialogPosition().

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -197,6 +197,24 @@ admin.order.refundorderpayment=Refund Payment
 admin.order.refundorderpayment_error=Errors where encountered while attempting to process the refund.
 admin.order.refundorderpayment_invalidAmount=The amount for refund must be an amount greater than 0 up to the amount that has been charged on the payment\: {amountCharged}.
 admin.order.refundorderpayment_success=Payment refund processed
+admin.roundingRule.detail.noPriceGroupRatesDefined=There are currently no rounding rule rates defined.
+admin.roundingrule=Rounding Rule Manager
+admin.roundingrule.create=Create New Rounding Rule
+admin.roundingrule.delete=Delete Rounding Rule use
+admin.roundingrule.delete_confirm=Are you sure you want to delete this rounding rule?
+admin.roundingrule.delete_nav=Delete
+admin.roundingrule.delete_success=Rounding Rule was deleted successfully
+admin.roundingrule.detail=Rounding Rule Detail
+admin.roundingrule.detail_hint=View the Info page of a given Rounding Rule
+admin.roundingrule.detail_permission=View Rounding Rule Info
+admin.roundingrule.edit=Edit Rounding Rule
+admin.roundingrule.list=List Rounding Rules
+admin.roundingrule.noroundingrulesdefined=There are currently no rounding rules defined.
+admin.roundingrule.save=Save Rounding Rule
+admin.roundingrule.save_nav=Save
+admin.roundingrule.save_success=Rounding Rule was saved successfully
+admin.roundingrule.saveroundingrule_success=The rounding rule was successfully saved.
+admin.roundingrule.saveroundingrulerate_success=The rounding rule and rounding rule rate were successfully saved.
 admin.order.search=Search
 admin.order.search.invaliddates=An invalid date was entered
 admin.orderfulfillment.process=Process Fulfillment
@@ -952,6 +970,9 @@ entity.purchaseorderitem.purchaseOrderItemID=purchaseOrderItemID
 entity.purchaseorderitem.quantityOrdered=quantityOrdered
 entity.purchaseorderitem.quantityReceived=quantityReceived
 entity.purchaseorderitem.stock=stock
+entity.roundingRule=Rounding Rule
+entity.roundingRule.roundingRuleCode=Rounding Rule Code
+entity.roundingRule.roundingRuleName=Rounding Rule Name
 entity.session.account=account
 entity.session.cart=cart
 entity.session.sessionID=sessionID
