Updating Product Options.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -108,6 +108,7 @@ admin.option.edittoggle.showhide=Show,Hide
 admin.option.list=List Product Options
 admin.option.listbyoptiongroups=List Product Options By Option Groups
 admin.option.listbyoptions=List Product Options By Option
+admin.option.listoptiongroups=List Option Groups
 admin.option.nooptiongroupsdefined=There are currently no product option groups defined.
 admin.option.nooptionsdefined=There are currently no product options defined.
 admin.option.nooptionsingroup=There are currently no product options in this option group
@@ -288,10 +289,10 @@ admin.product.noProductsDefined=No Products have been entered yet.
 admin.product.noproductpagesdefined=No Product Pages have been defined in the Site Manager
 admin.product.noproducttypesdefined=No Product Types have been defined in the Site Manager
 admin.product.previewalternateimage=Preview Image
-admin.product.pricegroupskuupdatedialog.title=Update Price Group / SKU Price
 admin.product.pricegroupskuupdatedialog.groupname=Group Name
-admin.product.pricegroupskuupdatedialog.selectrate=Select a Rate
 admin.product.pricegroupskuupdatedialog.newamount=New Amount
+admin.product.pricegroupskuupdatedialog.selectrate=Select a Rate
+admin.product.pricegroupskuupdatedialog.title=Update Price Group / SKU Price
 admin.product.productCategories.categoryPath=Category Path
 admin.product.productCategories.categoryTitle=Category
 admin.product.productCategories.isFeatured=Featured
