Completed price and weight auto-fill in SKUs table.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -340,6 +340,10 @@ admin.product.selectparentproducttype=Select
 admin.product.selectproductpages=Select Product Pages for Frontend Display
 admin.product.selectproducttype=Select Product Type
 admin.product.showbasicinfo=Show Basic Product Info
+admin.product.skupriceupdatedialog.title=Update SKU Prices
+admin.product.skupriceupdatedialog.newprice=New Price
+admin.product.skuweightupdatedialog.title=Update SKU Weights
+admin.product.skuweightupdatedialog.newweight=New Weight
 admin.product.uploadAlternateImage=Upload Image
 admin.product.uploadAlternateImage_fileError=At least one product image could not be added because an error ocurred uploading the file or it was not a valid image file (jpg, png, or gif).
 admin.product.uploadAlternateImage_success=Image was added
@@ -503,6 +507,8 @@ admin.setting.tab.workflowsettings=Workflow Settings
 admin.setting.updatefrontendviews=Update All Frontend Views
 admin.setting.updatefrontendviews_confirm=ARE YOU 100% SURE YOU WANT TO UPDATE ALL OF YOUR CUSTOM VIEWS
 admin.sku.uploadImage=Upload Image
+admin.sku.updateallprices_success=All SKU prices for this product have been updated.
+admin.sku.updateallweights_success=All SKU weights for this product have been updated.
 admin.vendor=Vendor Manager
 admin.vendor.dashboard=Vendor Dashboard
 admin.vendor.detail=Vendor Detail
