Fix for issue #415

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1122,7 +1122,7 @@ frontend.checkout.saveshippingmethod=Save & Continue
 setting=Setting
 setting.account=Account
 setting.advanced=Advanced Settings
-setting.advanced.currencyLocale=Currency Local
+setting.advanced.currencyLocale=Currency Locale
 setting.advanced.currencyType=Currency Type
 setting.advanced.dateFormat=Date Format
 setting.advanced.logDatabaseClearAfterDays=Number of days to maintain logs in Database
