Added some validation and updated the rounding rule property name.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -198,24 +198,6 @@ admin.order.refundorderpayment=Refund Payment
 admin.order.refundorderpayment_error=Errors where encountered while attempting to process the refund.
 admin.order.refundorderpayment_invalidAmount=The amount for refund must be an amount greater than 0 up to the amount that has been charged on the payment\: {amountCharged}.
 admin.order.refundorderpayment_success=Payment refund processed
-admin.roundingRule.detail.noPriceGroupRatesDefined=There are currently no rounding rule rates defined.
-admin.roundingrule=Rounding Rule Manager
-admin.roundingrule.create=Create New Rounding Rule
-admin.roundingrule.delete=Delete Rounding Rule use
-admin.roundingrule.delete_confirm=Are you sure you want to delete this rounding rule?
-admin.roundingrule.delete_nav=Delete
-admin.roundingrule.delete_success=Rounding Rule was deleted successfully
-admin.roundingrule.detail=Rounding Rule Detail
-admin.roundingrule.detail_hint=View the Info page of a given Rounding Rule
-admin.roundingrule.detail_permission=View Rounding Rule Info
-admin.roundingrule.edit=Edit Rounding Rule
-admin.roundingrule.list=List Rounding Rules
-admin.roundingrule.noroundingrulesdefined=There are currently no rounding rules defined.
-admin.roundingrule.save=Save Rounding Rule
-admin.roundingrule.save_nav=Save
-admin.roundingrule.save_success=Rounding Rule was saved successfully
-admin.roundingrule.saveroundingrule_success=The rounding rule was successfully saved.
-admin.roundingrule.saveroundingrulerate_success=The rounding rule and rounding rule rate were successfully saved.
 admin.order.search=Search
 admin.order.search.invaliddates=An invalid date was entered
 admin.orderfulfillment.process=Process Fulfillment
@@ -341,10 +323,10 @@ admin.product.selectparentproducttype=Select
 admin.product.selectproductpages=Select Product Pages for Frontend Display
 admin.product.selectproducttype=Select Product Type
 admin.product.showbasicinfo=Show Basic Product Info
-admin.product.skupriceupdatedialog.title=Update SKU Prices
 admin.product.skupriceupdatedialog.newprice=New Price
-admin.product.skuweightupdatedialog.title=Update SKU Weights
+admin.product.skupriceupdatedialog.title=Update SKU Prices
 admin.product.skuweightupdatedialog.newweight=New Weight
+admin.product.skuweightupdatedialog.title=Update SKU Weights
 admin.product.uploadAlternateImage=Upload Image
 admin.product.uploadAlternateImage_fileError=At least one product image could not be added because an error ocurred uploading the file or it was not a valid image file (jpg, png, or gif).
 admin.product.uploadAlternateImage_success=Image was added
@@ -400,6 +382,24 @@ admin.promotion.save_nav=Save
 admin.promotion.save_success=Promotion was saved successfully
 admin.report=Reporting Services
 admin.report.order=Order Report
+admin.roundingRule.detail.noPriceGroupRatesDefined=There are currently no rounding rule rates defined.
+admin.roundingrule=Rounding Rule Manager
+admin.roundingrule.create=Create New Rounding Rule
+admin.roundingrule.delete=Delete Rounding Rule use
+admin.roundingrule.delete_confirm=Are you sure you want to delete this rounding rule?
+admin.roundingrule.delete_nav=Delete
+admin.roundingrule.delete_success=Rounding Rule was deleted successfully
+admin.roundingrule.detail=Rounding Rule Detail
+admin.roundingrule.detail_hint=View the Info page of a given Rounding Rule
+admin.roundingrule.detail_permission=View Rounding Rule Info
+admin.roundingrule.edit=Edit Rounding Rule
+admin.roundingrule.list=List Rounding Rules
+admin.roundingrule.noroundingrulesdefined=There are currently no rounding rules defined.
+admin.roundingrule.save=Save Rounding Rule
+admin.roundingrule.save_nav=Save
+admin.roundingrule.save_success=Rounding Rule was saved successfully
+admin.roundingrule.saveroundingrule_success=The rounding rule was successfully saved.
+admin.roundingrule.saveroundingrulerate_success=The rounding rule and rounding rule rate were successfully saved.
 admin.search.cleardates=Clear Dates
 admin.selectBox.select=Select
 admin.setting=Settings Manager
@@ -507,9 +507,9 @@ admin.setting.tab.basicsettings=Basic Settings
 admin.setting.tab.workflowsettings=Workflow Settings
 admin.setting.updatefrontendviews=Update All Frontend Views
 admin.setting.updatefrontendviews_confirm=ARE YOU 100% SURE YOU WANT TO UPDATE ALL OF YOUR CUSTOM VIEWS
-admin.sku.uploadImage=Upload Image
 admin.sku.updateallprices_success=All SKU prices for this product have been updated.
 admin.sku.updateallweights_success=All SKU weights for this product have been updated.
+admin.sku.uploadImage=Upload Image
 admin.vendor=Vendor Manager
 admin.vendor.dashboard=Vendor Dashboard
 admin.vendor.detail=Vendor Detail
@@ -979,7 +979,8 @@ entity.purchaseorderitem.quantityOrdered=quantityOrdered
 entity.purchaseorderitem.quantityReceived=quantityReceived
 entity.purchaseorderitem.stock=stock
 entity.roundingRule=Rounding Rule
-entity.roundingRule.roundingRuleCode=Rounding Rule Code
+entity.roundingRule.roundingRuleExpression=Rounding Rule Expression
+entity.roundingRule.roundingRuleExpression_hint=This sting allows you to define how you would like to round a value.  For example to round to the nearest .49 or .99 this would be your rounding ule expression\: .49,.99
 entity.roundingRule.roundingRuleName=Rounding Rule Name
 entity.session.account=account
 entity.session.cart=cart
