After review with Greg.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -310,6 +310,7 @@ admin.product.previewalternateimage=Preview Image
 admin.product.pricegroupskuupdatedialog.groupname=Group Name
 admin.product.pricegroupskuupdatedialog.inherited=Inherited From
 admin.product.pricegroupskuupdatedialog.newamount=New Amount
+admin.product.pricegroupskuupdatedialog.norates=There are no rates available for this price group.
 admin.product.pricegroupskuupdatedialog.selectrate=Select a Rate
 admin.product.pricegroupskuupdatedialog.title=Update Price Group / SKU Price
 admin.product.productCategories.categoryPath=Category Path
@@ -508,6 +509,7 @@ admin.setting.tab.workflowsettings=Workflow Settings
 admin.setting.updatefrontendviews=Update All Frontend Views
 admin.setting.updatefrontendviews_confirm=ARE YOU 100% SURE YOU WANT TO UPDATE ALL OF YOUR CUSTOM VIEWS
 admin.sku.uploadImage=Upload Image
+admin.sku.updatepricegroupsettings_success=Price group rate settings have been updated.
 admin.sku.updateallprices_success=All SKU prices for this product have been updated.
 admin.sku.updateallweights_success=All SKU weights for this product have been updated.
 admin.vendor=Vendor Manager
