Added "global warning" to price group page. Fixes. Refactored logic to Greg's new method.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -229,6 +229,7 @@ admin.pricegroup.deletePriceGroupRate_confirm=Are you sure you want to delete th
 admin.pricegroup.deletePriceGroupRate_disabled=Price Group Rate can not be deleted because it is in use
 admin.pricegroup.deletePriceGroupRate_success=Price Group Rate was deleted successfully
 admin.pricegroup.delete_confirm=Are you sure you want to delete this price group?
+admin.pricegroup.detail.globalwarning=<strong>Warning!</strong> There is currently another rate ({ratevalue}) which is set to global. Setting this rate to global will diable the global flag on that rate.
 admin.pricegroup.delete_nav=Delete
 admin.pricegroup.delete_success=Price Group was deleted successfully
 admin.pricegroup.detail=Price Group Detail
