--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -93,6 +93,7 @@ admin.option.createoptiongroup=Create New Option Group
 admin.option.dashboard=Option
 admin.option.default=Option Dashboard
 admin.option.delete=Delete Option
+admin.option.deleteOption_confirm=Are you sure that you want to delete this option from the system?
 admin.option.delete_confirm=Are you sure you want to delete this option?
 admin.option.delete_disabled=This option cannot be deleted because it is assigned to Product SKUs.
 admin.option.delete_success=The option was deleted successfully.
@@ -101,6 +102,7 @@ admin.option.deleteoptiongroup_confirm=Are you sure you want to delete this Opti
 admin.option.deleteoptiongroup_disabled=This option group cannot be deleted because it contains options.
 admin.option.deleteoptiongroup_success=The option group was successfully deleted.
 admin.option.detail=Option Detail
+admin.option.detailOptionGroup.addOption=Add Option
 admin.option.detailoptiongroup=Option Group Details
 admin.option.edit=Manage Option Group
 admin.option.editOptionGroup=Edit Option Group
