Minor bug fixes to options & option groups

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -136,6 +136,7 @@ admin.option.saveorder=Save Order
 admin.option.selectoptiongroupimage=Select Associated Option Group Image to Upload (optional)
 admin.option.show=Show
 admin.option.showall=All
+admin.optionGroup.delete_success=Option Group Deleted
 admin.optionGroup.reorder=Reorder Option Groups
 admin.option_hint=The Product Option Manager allows for the management of different groups of options surounding Product.  For example things like Size and Color are Product Options
 admin.order=Order Manager
