Refactoring. Before deleting extra Options views.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -205,9 +205,9 @@ admin.order.search.invaliddates=An invalid date was entered
 admin.orderfulfillment.process=Process Fulfillment
 admin.priceGroup.detail.noPriceGroupRatesDefined=There are currently no price group rates defined.
 admin.pricegroup=Price Group Manager
-admin.pricegroup.create=Create New Price Group
+admin.pricegroup.createPriceGroup=Create New Price Group
 admin.pricegroup.default=Price Group Dashboard
-admin.pricegroup.delete=Delete Price Group
+admin.pricegroup.deletePriceGroup=Delete Price Group
 admin.pricegroup.deletePriceGroupRate=Delete Price Group Rate
 admin.pricegroup.deletePriceGroupRate_confirm=Are you sure you want to delete this price group rate?
 admin.pricegroup.deletePriceGroupRate_disabled=Price Group Rate can not be deleted because it is in use
