--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -216,18 +216,19 @@ admin.pricegroup.delete_confirm=Are you sure you want to delete this price group
 admin.pricegroup.detail.globalwarning=<strong>Warning!</strong> There is currently another rate ({ratevalue}) which is set to global. Setting this rate to global will diable the global flag on that rate.
 admin.pricegroup.delete_nav=Delete
 admin.pricegroup.delete_success=Price Group was deleted successfully
-admin.pricegroup.detail=Price Group Detail
+admin.pricegroup.detailpricegroup=Price Group Detail
 admin.pricegroup.detail_hint=View the Info page of a given Price Group
 admin.pricegroup.detail_permission=View Price Group Info
-admin.pricegroup.edit=Edit Price Group
+admin.pricegroup.editPriceGroup=Edit Price Group
 admin.pricegroup.edit.addPriceGroupRate=Add Price Group Rate
 admin.pricegroup.edit.editPriceGroupRate=Edit Price Group Rate
 admin.pricegroup.edit.priceGroupRateAppliesToAllProducts=All Products
 admin.pricegroup.edit.priceGroupRates=Price Group Rates
 admin.pricegroup.edit.removePriceGroupRate=Remove Price Group Rate
-admin.pricegroup.list=List Price Groups
+admin.pricegroup.listPriceGroups=List Price Groups
 admin.pricegroup.nopricegroupsdefined=There are currently no price groups defined.
-admin.pricegroup.save=Save Price Group
+admin.pricegroups.nopricegroupratesdefined=There are currently no price group rates defined.
+admin.pricegroup.savePriceGroup=Save Price Group
 admin.pricegroup.save_nav=Save
 admin.pricegroup.save_success=Price Group was saved successfully
 admin.pricegroup.savepricegroup_nowaddrates=The price group was successfully saved. You can now add rates.
