--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -457,6 +457,8 @@ admin.setting.edittaxcategory=Edit Tax Category
 admin.setting.edittaxcategory_nav=Edit
 admin.setting.fulfillmentmethod.shipping=Shipping
 admin.setting.fulfillmentmethod.shippingsettings=Shipping Settings
+admin.setting.importbundledata=Import Bundle Data
+admin.setting.importbundledata_confirm=Are you 100% sure you want to delete all of the data in your database and import whatever was created in the bundle?
 admin.setting.listPaymentServices=Payment Service Listing
 admin.setting.listPaymentServices.servicedisplayname=Payment Service
 admin.setting.listPaymentServices_nav=Configure Payment Services
