Worked on Delete for Price Groups.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -209,11 +209,14 @@ admin.pricegroup=Price Group Manager
 admin.pricegroup.createPriceGroup=Create New Price Group
 admin.pricegroup.default=Price Group Dashboard
 admin.pricegroup.deletePriceGroup=Delete Price Group
+admin.pricegroup.deletePriceGroup_success=Price Group was deleted successfully.
+admin.pricegroup.deletePriceGroup_failure=The Price Group could not be deleted.
 admin.pricegroup.deletePriceGroupRate=Delete Price Group Rate
 admin.pricegroup.deletePriceGroupRate_confirm=Are you sure you want to delete this price group rate?
 admin.pricegroup.deletePriceGroupRate_disabled=Price Group Rate can not be deleted because it is in use
-admin.pricegroup.deletePriceGroupRate_success=Price Group Rate was deleted successfully
-admin.pricegroup.delete_confirm=Are you sure you want to delete this price group?
+admin.pricegroup.deletePriceGroupRate_success=Price Group Rate was deleted successfully.
+admin.pricegroup.deletePriceGroupRate_failure=The Price Group could not be deleted.
+admin.pricegroup.deletePriceGroup_confirm=Are you sure you want to delete this price group?
 admin.pricegroup.detail.globalwarning=<strong>Warning!</strong> There is currently another rate ({ratevalue}) which is set to global. Setting this rate to global will diable the global flag on that rate.
 admin.pricegroup.delete_nav=Delete
 admin.pricegroup.delete_success=Price Group was deleted successfully
