Attribute / Attribute Set Update WIP

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -25,8 +25,7 @@ admin.attribute.addOption=Add Option
 admin.attribute.attributeOptionLabel=Label (optional)
 admin.attribute.attributeOptionValue=Value
 admin.attribute.closeForm=Close
-admin.attribute.create=Create New Attribute Set
-admin.attribute.createAttributeSet=Add Attribute Set
+admin.attribute.createAttributeSet=Create Attribute Set
 admin.attribute.default=Attribute Dashboard
 admin.attribute.delete=Delete Attribute
 admin.attribute.deleteAttributeOption=Delete
@@ -37,10 +36,10 @@ admin.attribute.detail=Attribute Detail
 admin.attribute.detailattributeset=Attribute Set Details
 admin.attribute.edit=Manage Attribute Set
 admin.attribute.editAttributeSet=Edit Attribute Set
-admin.attribute.list=Attribute Sets
 admin.attribute.listByAttributeSets=View List by Attribute Sets
 admin.attribute.listByAttributes=View List by Attributes
-admin.attribute.noAttributeSetsDefined=No Attribute Sets have been defined.
+admin.attribute.listattributesets=Attribute Sets
+admin.attribute.listattributesets.noAttributeSets=No Attribute Sets have been defined.
 admin.attribute.noAttributesInSet=There are currently no attributes defined in this Attribute Set
 admin.attribute.order.handle=Drag
 admin.attribute.removeOption=Remove Option
@@ -111,6 +110,7 @@ admin.option.list=List Product Options
 admin.option.listbyoptiongroups=List Product Options By Option Groups
 admin.option.listbyoptions=List Product Options By Option
 admin.option.listoptiongroups=List Option Groups
+admin.option.listoptiongroups.noOptionGroups=No Option Groups have been setup yet.
 admin.option.nooptiongroupsdefined=There are currently no product option groups defined.
 admin.option.nooptionsdefined=There are currently no product options defined.
 admin.option.nooptionsingroup=There are currently no product options in this option group
