--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -33,7 +33,9 @@ admin.attribute.deleteAttributeOption_confirm=Are you sure you want to delete th
 admin.attribute.deleteAttributeSet_confirm=Are you sure you want to delete this Attribute Set?
 admin.attribute.delete_confirm=Are you sure you want to delete this attribute?
 admin.attribute.detail=Attribute Detail
+admin.attribute.detailAttributeSet.addAttribute=Add Attribute
 admin.attribute.detailattributeset=Attribute Set Details
+admin.attribute.detailattributeset.noAtributes=No Attributes have been created for this attribute set yet.
 admin.attribute.edit=Manage Attribute Set
 admin.attribute.editAttributeSet=Edit Attribute Set
 admin.attribute.listByAttributeSets=View List by Attribute Sets
@@ -585,6 +587,7 @@ define.selectall=Select All
 define.true=True
 define.username=Username
 define.yes=Yes
+entity.Account.password=Password
 entity.PriceGroupRate.roundingRule=Rounding Rule
 entity.account.accountDetails=Account Details
 entity.account.accountEmails=Account Emails
