--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -422,6 +422,8 @@ admin.setting.dashboard=Settings Manager
 admin.setting.default=Setting Dashboard
 admin.setting.deleteAddressZone=Delete Address Zone
 admin.setting.deleteAddressZoneLocation=Delete Address Zone Location
+admin.setting.deleteAddressZone_confirm=Are you sure you want to delete this Address Zone?
+admin.setting.deleteAddressZone_nav=Delete
 admin.setting.deleteAddressZone_success=Address Zone Deleted
 admin.setting.deletePaymentMehod_confirm=Are you sure you want to delete this Payment Method?
 admin.setting.deletePaymentMethod=Delete Payment Method
@@ -641,7 +643,7 @@ entity.address.streetAddress_validateRequired=Please enter a vaild Street Addres
 entity.addresszone.addressZoneID=Address Zone ID
 entity.addresszone.addressZoneLocations=Address Zone Locations
 entity.addresszone.addressZoneName=Address Zone Name
-entity.addresszone.delete_validateIsAssigned=This Address Zone cannot be deleted because it is in use.
+entity.addresszone.delete_validateIsDeletable=This Address Zone cannot be deleted because it is in use.
 entity.addresszonelocation.addressZone=Address Zone
 entity.addresszonelocation.addressZoneLocationID=Address Zone Location ID
 entity.attribute.activeFlag=Active
@@ -1007,7 +1009,7 @@ entity.setting.global=Global Setting
 entity.setting.settingID=settingID
 entity.setting.settingName=Setting Name
 entity.setting.settingValue=Setting Value
-entity.shippingMethod.delete_validateIsAssigned=This shipping method cannot be deleted because it has been used in an order.
+entity.shippingMethod.delete_validateIsDeletable=This shipping method cannot be deleted because it has been used in an order.
 entity.shippingMethod.eligibleAddressZone=Eligible Address Zone
 entity.shippingMethod.eligibleAddressZone_hint=Limits a shipping method to only be used for a given address Zone.  Leave blank to allow for all address
 entity.shippingmethod.activeFlag=Active
