Updates to attributes.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -31,6 +31,7 @@ admin.attribute.delete=Delete Attribute
 admin.attribute.deleteAttributeOption=Delete
 admin.attribute.deleteAttributeOption_confirm=Are you sure you want to delete this Attribute Option?
 admin.attribute.deleteAttributeSet_confirm=Are you sure you want to delete this Attribute Set?
+admin.attribute.deleteAttribute_confirm=Are you sure that you want to delete this attribute?
 admin.attribute.delete_confirm=Are you sure you want to delete this attribute?
 admin.attribute.detail=Attribute Detail
 admin.attribute.detailAttributeSet.addAttribute=Add Attribute
