Minor tweeks, and an update to the rounding rule for rounding direction.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -307,9 +307,9 @@ admin.product.previewalternateimage=Preview Image
 admin.product.pricegroupskuupdatedialog.currentrate=Current Rate
 admin.product.pricegroupskuupdatedialog.groupname=Group Name
 admin.product.pricegroupskuupdatedialog.inherited=Inherited From
-admin.product.pricegroupskuupdatedialog.selectarate=Select a Rate
 admin.product.pricegroupskuupdatedialog.newamount=New Amount
 admin.product.pricegroupskuupdatedialog.norates=There are no rates available for this price group.
+admin.product.pricegroupskuupdatedialog.selectarate=Select a Rate
 admin.product.pricegroupskuupdatedialog.selectrate=New Rate
 admin.product.pricegroupskuupdatedialog.title=Update Price Group / SKU Price
 admin.product.productCategories.categoryPath=Category Path
@@ -597,6 +597,7 @@ define.username=Username
 define.yes=Yes
 entity.Account.password=Password
 entity.PriceGroupRate.roundingRule=Rounding Rule
+entity.RoundingRule.roundingRuleDirection=Rounding Direction
 entity.account.accountDetails=Account Details
 entity.account.accountEmails=Account Emails
 entity.account.accountID=Account ID
