Few fixes to rounding rule save and validation

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -405,6 +405,7 @@ admin.roundingrule=Rounding Rule Manager
 admin.roundingrule.create=Create New Rounding Rule
 admin.roundingrule.delete=Delete Rounding Rule use
 admin.roundingrule.delete_confirm=Are you sure you want to delete this rounding rule?
+admin.roundingrule.delete_disabled=Rounding Rule can not be deleted because it is in use
 admin.roundingrule.delete_nav=Delete
 admin.roundingrule.delete_success=Rounding Rule was deleted successfully
 admin.roundingrule.detail=Rounding Rule Detail
