--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -60,6 +60,7 @@ admin.brand.create=Create New Brand
 admin.brand.default=Brand Dashboard
 admin.brand.delete=Delete Brand
 admin.brand.delete_confirm=Are you sure you want to delete this brand?
+admin.brand.delete_disabled=Brand can not be deleted because it is in use
 admin.brand.delete_nav=Delete
 admin.brand.delete_success=Brand was deleted successfully
 admin.brand.detail=Brand Detail
