Wrapped up Attribute UI Refactoring

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -30,8 +30,11 @@ admin.attribute.default=Attribute Dashboard
 admin.attribute.delete=Delete Attribute
 admin.attribute.deleteAttributeOption=Delete
 admin.attribute.deleteAttributeOption_confirm=Are you sure you want to delete this Attribute Option?
+admin.attribute.deleteAttributeOption_success=The Attribute Option was sucessfully deleted
 admin.attribute.deleteAttributeSet_confirm=Are you sure you want to delete this Attribute Set?
+admin.attribute.deleteAttributeSet_success=The Attribute Set was sucessfully deleted
 admin.attribute.deleteAttribute_confirm=Are you sure that you want to delete this attribute?
+admin.attribute.deleteAttribute_success=The Attribute was sucessfully deleted
 admin.attribute.delete_confirm=Are you sure you want to delete this attribute?
 admin.attribute.detail=Attribute Detail
 admin.attribute.detailAttributeSet.addAttribute=Add Attribute
