WIP: Promotion Reward UI Updates

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -373,6 +373,8 @@ admin.promotion.delete_confirm=Are you sure you want to delete this promotion?
 admin.promotion.delete_nav=Delete
 admin.promotion.delete_success=Promotion was deleted successfully
 admin.promotion.detail=Promotion Detail
+admin.promotion.detail.addPromotionRewardProduct=Add Product Reward
+admin.promotion.detail.addPromotionRewardShipping=Add Shipping Reward
 admin.promotion.detail.noPromotionRewardsDefined=There are no promotion rewards currently defined for this promotion.
 admin.promotion.detail.tabDescription=Description
 admin.promotion.detail.tabPromotionCodes=Promotion Codes
@@ -394,6 +396,7 @@ admin.promotion.edit.validatePromotionReward=Please specify promotion reward
 admin.promotion.editPromotionReward=Edit Promotion Reward
 admin.promotion.list=List Promotions
 admin.promotion.noShippingMethodsConfigured=There are currently no shipping methods configured.
+admin.promotion.nopromotionrewardsdefined=No Promotion Rewards have been defined yet.
 admin.promotion.nopromotionsdefined=There are currently no promotions defined.
 admin.promotion.promotionReward.item=Item
 admin.promotion.promotionRewardType.amountOff=Amount Off
