Updates to order confirmation page.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -610,7 +610,13 @@ define.selectall=Select All
 define.true=True
 define.username=Username
 define.yes=Yes
+entity.Account.emailAddress=Email Address
 entity.Account.password=Password
+entity.Account.phoneNumber=Phone Number
+entity.Order.fulfillmentTotal=Delivery Charges
+entity.Order.orderTota=Order Total
+entity.Order.subtotal=Subtotal
+entity.Order.taxtotal=Tax Total
 entity.PriceGroupRate.roundingRule=Rounding Rule
 entity.PromotionRewardProduct.brands=Brands
 entity.PromotionRewardProduct.options=Options
