--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -805,6 +805,7 @@ entity.order.account=Customer Account
 entity.order.billingAddress=billingAddress
 entity.order.cancel_validatestatus=Order cannot be deleted due to order status ({statusValue})
 entity.order.createdDateTime=Date Created
+entity.order.discountTotal=Discount
 entity.order.orderCloseDateTime=Date Closed
 entity.order.orderNumber=Order Number
 entity.order.orderOpenDateTime=Date Placed
