minor layout fixes

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -215,6 +215,7 @@ admin.order.search=Search
 admin.order.search.invaliddates=An invalid date was entered
 admin.orderfulfillment.process=Process Fulfillment
 admin.priceGroup.detail.noPriceGroupRatesDefined=There are currently no price group rates defined.
+admin.pricegroup.detail.ratetype=Rate Type
 admin.pricegroup=Price Group Manager
 admin.pricegroup.createPriceGroup=Create New Price Group
 admin.pricegroup.default=Price Group Dashboard
