Added promotion reward validation for amounts

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -395,6 +395,7 @@ admin.promotion.edit.removePromotionReward=Remove Promotion Reward
 admin.promotion.edit.rewardType=Reward Type
 admin.promotion.edit.shippingMethod=Shipping Method
 admin.promotion.edit.validatePromotionReward=Please specify promotion reward
+admin.promotion.editPromotion=Edit Promotion
 admin.promotion.editPromotionReward=Edit Promotion Reward
 admin.promotion.list=List Promotions
 admin.promotion.noShippingMethodsConfigured=There are currently no shipping methods configured.
@@ -619,9 +620,11 @@ entity.Order.subtotal=Subtotal
 entity.Order.taxtotal=Tax Total
 entity.PriceGroupRate.roundingRule=Rounding Rule
 entity.PromotionRewardProduct.brands=Brands
+entity.PromotionRewardProduct.itemDiscountType=Discount Type
 entity.PromotionRewardProduct.options=Options
 entity.PromotionRewardShipping.shippingAmount=Shipping Rate Fixed Amount
 entity.PromotionRewardShipping.shippingAmountOff=Shipping Rate Amount Off
+entity.PromotionRewardShipping.shippingDiscountType=Shipping Discount Type
 entity.PromotionRewardShipping.shippingMethods=Shipping Methods
 entity.PromotionRewardShipping.shippingPercentageOff=Shipping Rate % Off
 entity.RoundingRule.roundingRuleDirection=Rounding Direction
